feat: Update navigation links and button routes in the header

--- a/frontend/views/index.ejs
+++ b/frontend/views/index.ejs
@@ -47,16 +47,16 @@
 
             <!-- Center: Nav Links -->
             <div class="d-none d-md-flex gap-4 justify-content-center flex-grow-1">
-              <a href="/pricing" class="text-dark text-hover-primary fw-semibold">Pricing</a>
-              <a href="/help" class="text-dark text-hover-primary fw-semibold">Help</a>
-              <a href="/blog" class="text-dark text-hover-primary fw-semibold">Blog</a>
-              <a href="/updates" class="text-dark text-hover-primary fw-semibold">Updates</a>
+              <a href="/#" class="text-dark text-hover-primary fw-semibold">Pricing</a>
+              <a href="/#" class="text-dark text-hover-primary fw-semibold">Help</a>
+              <a href="/#" class="text-dark text-hover-primary fw-semibold">Blog</a>
+              <a href="/#" class="text-dark text-hover-primary fw-semibold">Updates</a>
             </div>
 
             <!-- Right: Buttons -->
             <div class="d-flex align-items-center gap-3">
-              <a href="/signin" class="btn btn-light">Sign In</a>
-              <a href="/get-started" class="btn btn-primary">Get Started</a>
+              <a href="/login" class="btn btn-light">Sign In</a>
+              <a href="/register" class="btn btn-primary">Get Started</a>
             </div>
 
           </div>
